--- a/src/main/resources/views/modeller.fxml
+++ b/src/main/resources/views/modeller.fxml
@@ -88,7 +88,7 @@
             <ToggleGroup fx:id="distributions" />
          </toggleGroup>
       </RadioButton>
-      <RadioButton id="radioButtonUniformDistribution" fx:id="radioButtonUniformDistribution" blendMode="MULTIPLY" layoutX="581.0" layoutY="187.0" mnemonicParsing="false" stylesheets="@../styles/styles.css" text="Случайный (Равномерный закон)" toggleGroup="$distributions">
+      <RadioButton id="radioButtonUniformDistribution" fx:id="radioButtonUniformDistribution" blendMode="MULTIPLY" layoutX="581.0" layoutY="187.0" mnemonicParsing="false" stylesheets="@../styles/styles.css" text="Случайный (Нормальный закон)" toggleGroup="$distributions">
          <font>
             <Font size="15.0" />
          </font>
@@ -118,16 +118,16 @@
             <Font size="15.0" />
          </font>
       </Label>
-      <Spinner id="spinnerTime" fx:id="time" blendMode="MULTIPLY" editable="true" layoutX="853.0" layoutY="132.0" max="10" min="1" prefHeight="34.0" prefWidth="102.0" stylesheets="@../styles/styles.css" visible="false" />
-      <Spinner id="spinnerMatO" fx:id="matO" blendMode="MULTIPLY" editable="true" layoutX="853.0" layoutY="215.0" max="10" min="1" prefHeight="34.0" prefWidth="102.0" stylesheets="@../styles/styles.css" visible="false" />
-      <Spinner id="spinnerDispersion" fx:id="dispersion" blendMode="MULTIPLY" editable="true" layoutX="853.0" layoutY="259.0" max="4.5" min="0" prefHeight="34.0" prefWidth="102.0" stylesheets="@../styles/styles.css" visible="false" />
+      <Spinner id="spinnerTime" fx:id="time" amountToStepBy="0.1" blendMode="MULTIPLY" editable="true" layoutX="853.0" layoutY="132.0" max="10" min="1" prefHeight="34.0" prefWidth="102.0" stylesheets="@../styles/styles.css" visible="false" />
+      <Spinner id="spinnerMatO" fx:id="matO" amountToStepBy="0.1" blendMode="MULTIPLY" editable="true" layoutX="853.0" layoutY="215.0" max="10" min="1" prefHeight="34.0" prefWidth="102.0" stylesheets="@../styles/styles.css" visible="false" />
+      <Spinner id="spinnerDispersion" fx:id="dispersion" amountToStepBy="0.1" blendMode="MULTIPLY" editable="true" layoutX="853.0" layoutY="259.0" max="4.5" min="0" prefHeight="34.0" prefWidth="102.0" stylesheets="@../styles/styles.css" visible="false" />
       <Spinner id="spinnerIntens" fx:id="intens" blendMode="MULTIPLY" editable="true" layoutX="853.0" layoutY="335.0" max="4" min="1" prefHeight="34.0" prefWidth="102.0" stylesheets="@../styles/styles.css" visible="false" />
       <Label id="labelPOA" layoutX="578.0" layoutY="401.0" stylesheets="@../styles/styles.css" text="Вероятность заезда а/м:">
          <font>
             <Font size="15.0" />
          </font>
       </Label>
-      <Spinner id="spinnerPOA" fx:id="probabilityOfArrival" blendMode="MULTIPLY" editable="true" layoutX="853.0" layoutY="395.0" prefHeight="34.0" prefWidth="102.0" stylesheets="@../styles/styles.css" />
+      <Spinner id="spinnerPOA" fx:id="probabilityOfArrival" amountToStepBy="0.1" blendMode="MULTIPLY" editable="true" layoutX="853.0" layoutY="395.0" max="1" min="0" prefHeight="34.0" prefWidth="102.0" stylesheets="@../styles/styles.css" />
       <AnchorPane cache="true" layoutX="1.0" layoutY="1.0" prefHeight="30.0" prefWidth="1000.0" styleClass="close_area" stylesheets="@../styles/styles.css">
          <children>
             <Button fx:id="closeButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" style="-fx-background-radius: 20;" styleClass="button_close" stylesheets="@../styles/styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="7.0">
