--- a/src/main/resources/views/dbWorkViews/dbWork.fxml
+++ b/src/main/resources/views/dbWorkViews/dbWork.fxml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="anchorPane" prefHeight="506.0" prefWidth="775.0" styleClass="window_background" stylesheets="@../../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.dbControllers.DBWorkController">
+<AnchorPane fx:id="anchorPane" prefHeight="506.0" prefWidth="775.0" styleClass="window_background" stylesheets="@../../styles/styles.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.dbControllers.DBWorkController">
    <children>
       <TableView fx:id="fuelTable" blendMode="MULTIPLY" layoutX="14.0" layoutY="37.0" prefHeight="318.0" prefWidth="356.0">
         <columns>
@@ -32,7 +30,6 @@
          </styleClass></Button>
       <TableView fx:id="carTable" blendMode="MULTIPLY" layoutX="409.0" layoutY="37.0" prefHeight="318.0" prefWidth="356.0">
         <columns>
-          <TableColumn fx:id="columnId" prefWidth="26.0" text="Id" />
           <TableColumn fx:id="columnModel" prefWidth="87.0" text="Модель" />
             <TableColumn fx:id="columnFuelType" minWidth="0.0" prefWidth="98.0" text="Вид топлива" />
             <TableColumn fx:id="columnTankVolume" prefWidth="170.0" text="Объём бака (л)" />
@@ -62,6 +59,5 @@
             </Button>
          </children>
       </AnchorPane>
-      <Button layoutX="339.0" layoutY="374.0" mnemonicParsing="false" onAction="#updateTables" prefHeight="26.0" prefWidth="97.0" styleClass="button_restyling" text="Обновить" />
    </children>
 </AnchorPane>
