--- a/src/main/resources/views/dbWorkViews/carParametersAdd.fxml
+++ b/src/main/resources/views/dbWorkViews/carParametersAdd.fxml
@@ -13,8 +13,8 @@
                 <String fx:value="button_restyling_bounds" />
             </styleClass></Button>
         <TextField fx:id="model" blendMode="MULTIPLY" layoutX="14.0" layoutY="31.0" prefHeight="41.0" prefWidth="239.0" promptText="Введите модель..." styleClass="button_restyling_bounds" stylesheets="@../../styles/styles.css" />
-        <TextField fx:id="fuelType" blendMode="MULTIPLY" layoutX="14.0" layoutY="70.0" prefHeight="41.0" prefWidth="239.0" promptText="Введите тип топлива..." styleClass="button_restyling_bounds" stylesheets="@../../styles/styles.css" />
         <TextField fx:id="tankVolume" blendMode="MULTIPLY" layoutX="14.0" layoutY="112.0" prefHeight="25.0" prefWidth="200.0" promptText="Введите объём бака..." styleClass="button_restyling_bounds" stylesheets="@../../styles/styles.css" />
+        <ComboBox fx:id="comboBox" layoutX="14.0" layoutY="72.0" prefHeight="26.0" prefWidth="200.0" />
         <Button fx:id="closeButton" layoutX="232.0" layoutY="24.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" style="-fx-background-radius: 20;" styleClass="button_close" stylesheets="@../../styles/styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="5.0">
             <font>
                 <Font size="6.0" />
