--- a/src/main/resources/views/downloadTopology.fxml
+++ b/src/main/resources/views/downloadTopology.fxml
@@ -1,22 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="272.0" prefWidth="254.0" styleClass="window_background" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DownloadTopologyController">
+<AnchorPane prefHeight="306.0" prefWidth="254.0" styleClass="window_background" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DownloadTopologyController">
    <children>
       <TableView fx:id="tableView" blendMode="MULTIPLY" layoutX="6.0" layoutY="28.0" prefHeight="207.0" prefWidth="241.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
         <columns>
           <TableColumn fx:id="columnName" prefWidth="230.0" text="Название топологии" />
         </columns>
       </TableView>
-      <Button fx:id="button" layoutX="27.0" layoutY="228.0" mnemonicParsing="false" onAction="#selectTopology" prefHeight="25.0" prefWidth="71.0" text="ОК">
+      <Button fx:id="buttonSelect" layoutX="27.0" layoutY="228.0" mnemonicParsing="false" onAction="#selectTopology" prefHeight="25.0" prefWidth="71.0" text="Выбрать">
          <styleClass>
             <String fx:value="button_restyling_bounds" />
             <String fx:value="button_restyling" />
          </styleClass></Button>
+       <Button fx:id="buttonDelete" layoutX="27.0" layoutY="269.0" mnemonicParsing="false" onAction="#deleteTopology" prefHeight="71.0" prefWidth="107.0" text="Удалить">
+           <styleClass>
+               <String fx:value="button_restyling_bounds" />
+               <String fx:value="button_restyling" />
+           </styleClass></Button>
    </children>
 </AnchorPane>
