--- a/src/main/resources/views/downloadTopology.fxml
+++ b/src/main/resources/views/downloadTopology.fxml
@@ -1,25 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import java.lang.String?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="306.0" prefWidth="254.0" styleClass="window_background" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DownloadTopologyController">
+<AnchorPane prefHeight="351.0" prefWidth="255.0" styleClass="window_background" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DownloadTopologyController">
    <children>
-      <TableView fx:id="tableView" blendMode="MULTIPLY" layoutX="6.0" layoutY="28.0" prefHeight="207.0" prefWidth="241.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+      <TableView fx:id="tableView" blendMode="MULTIPLY" layoutX="13.0" layoutY="44.0" prefHeight="207.0" prefWidth="241.0" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="13.0" AnchorPane.topAnchor="44.0">
         <columns>
           <TableColumn fx:id="columnName" prefWidth="230.0" text="Название топологии" />
         </columns>
       </TableView>
-      <Button fx:id="buttonSelect" layoutX="27.0" layoutY="228.0" mnemonicParsing="false" onAction="#selectTopology" prefHeight="25.0" prefWidth="71.0" text="Выбрать">
+      <Button fx:id="buttonSelect" layoutX="28.0" layoutY="266.0" mnemonicParsing="false" onAction="#selectTopology" prefHeight="25.0" prefWidth="71.0" text="Выбрать">
          <styleClass>
             <String fx:value="button_restyling_bounds" />
             <String fx:value="button_restyling" />
          </styleClass></Button>
-       <Button fx:id="buttonDelete" layoutX="27.0" layoutY="269.0" mnemonicParsing="false" onAction="#deleteTopology" prefHeight="71.0" prefWidth="107.0" text="Удалить">
+       <Button fx:id="buttonDelete" layoutX="28.0" layoutY="307.0" mnemonicParsing="false" onAction="#deleteTopology" prefHeight="71.0" prefWidth="107.0" text="Удалить">
            <styleClass>
                <String fx:value="button_restyling_bounds" />
                <String fx:value="button_restyling" />
            </styleClass></Button>
+      <AnchorPane fx:id="dragableArea" cache="true" layoutX="1.0" layoutY="1.0" prefHeight="30.0" prefWidth="252.0" styleClass="close_area" stylesheets="@../styles/styles.css">
+         <children>
+            <Button fx:id="closeButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" style="-fx-background-radius: 20;" styleClass="button_close" stylesheets="@../styles/styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="7.0">
+               <font>
+                  <Font size="6.0" />
+               </font>
+            </Button>
+            <Button fx:id="back_button" layoutX="24.0" layoutY="19.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" styleClass="button_back" stylesheets="@../styles/styles.css" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="7.0">
+               <font>
+                  <Font size="6.0" />
+               </font>
+            </Button>
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
