--- a/src/main/resources/views/constructor.fxml
+++ b/src/main/resources/views/constructor.fxml
@@ -61,7 +61,7 @@
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="376.0" prefWidth="147.0">
                <children>
-                  <ImageView fx:id="entry" fitHeight="50.0" fitWidth="50.0" layoutX="15.0" layoutY="53.0" onDragDetected="#entryOnDragDetectedEvent" onDragOver="#entryOnDragOverEvent" onMouseClicked="#entryOnMouseClicked" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="entry" fitHeight="50.0" fitWidth="50.0" layoutX="15.0" layoutY="53.0" onDragDetected="#entryOnDragDetectedEvent" onDragOver="#entryOnDragOverEvent" onMouseClicked="#entryOnMouseClicked" pickOnBounds="true" preserveRatio="true" rotate="180.0">
                      <image>
                         <Image url="@../pics/sprites.png" />
                      </image>
