--- a/src/main/resources/views/imitation.fxml
+++ b/src/main/resources/views/imitation.fxml
@@ -72,7 +72,7 @@
             </Button>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="statistics" layoutX="841.0" layoutY="353.0" prefHeight="87.0" prefWidth="143.0">
+      <AnchorPane fx:id="statistics" layoutX="790.0" layoutY="353.0" prefHeight="87.0" prefWidth="170.0">
          <children>
             <Label layoutX="41.0" styleClass="text" stylesheets="@../styles/styles.css" text="Статистика">
                <font>
@@ -105,6 +105,16 @@
                </font>
             </Label>
             <Label fx:id="fuelValueLabel" layoutX="135.0" layoutY="69.0" styleClass="text" stylesheets="@../styles/styles.css" text="0">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
+            <Label fx:id="cash_value_label1" layoutX="152.0" layoutY="19.0" styleClass="text" stylesheets="@../styles/styles.css" text="руб.">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
+            <Label fx:id="cash_value_label11" layoutX="152.0" layoutY="69.0" styleClass="text" stylesheets="@../styles/styles.css" text="л.">
                <font>
                   <Font size="17.0" />
                </font>
