--- a/src/main/resources/views/imitation.fxml
+++ b/src/main/resources/views/imitation.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane" prefHeight="706.0" prefWidth="1007.0" styleClass="window_background" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ImitationController">
+<AnchorPane fx:id="anchorPane" prefHeight="706.0" prefWidth="1007.0" styleClass="window_background" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ImitationController">
    <children>
       <AnchorPane fx:id="threadButtons" layoutX="10.0" layoutY="40.0" prefHeight="50.0" prefWidth="120.0">
          <children>
@@ -111,7 +111,7 @@
             <Slider fx:id="sliderMode" blendMode="MULTIPLY" blockIncrement="1.0" layoutX="3.0" layoutY="28.0" majorTickUnit="2.0" max="3.0" min="1.0" minorTickCount="1" showTickLabels="true" showTickMarks="true" snapToTicks="true" />
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="cahshBoxPopup" layoutX="39.0" layoutY="572.0" prefHeight="96.0" prefWidth="143.0">
+      <AnchorPane fx:id="cashBoxPopup" layoutX="39.0" layoutY="572.0" prefHeight="96.0" prefWidth="143.0" styleClass="window_background">
          <children>
             <Label layoutX="10.0" layoutY="10.0" text="Profit" />
             <Label layoutX="10.0" layoutY="40.0" text="Balance" />
@@ -121,24 +121,24 @@
             <Label fx:id="cashboxCriticalValue" layoutX="115.0" layoutY="70.0" text="0" />
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="fuelTankPopup" layoutX="218.0" layoutY="570.0" prefHeight="121.0" prefWidth="140.0">
+      <AnchorPane fx:id="fuelTankPopup" layoutX="221.0" layoutY="560.0" prefHeight="102.0" prefWidth="140.0" styleClass="window_background">
          <children>
             <Label layoutX="10.0" layoutY="10.0" text="Fuel" />
-            <Label layoutX="10.0" layoutY="40.0" text="Volume" />
-            <Label layoutX="10.0" layoutY="70.0" text="CriticalLevel" />
+            <Label layoutX="10.0" layoutY="31.0" text="Volume" />
+            <Label layoutX="10.0" layoutY="52.0" text="CriticalLevel" />
             <Label fx:id="fueltankFuelValue" layoutX="115.0" layoutY="10.0" text="0" />
-            <Label fx:id="fueltankVolumeValue" layoutX="115.0" layoutY="40.0" text="0" />
-            <Label fx:id="fueltankCriticalLevel" layoutX="115.0" layoutY="70.0" text="0" />
-            <Label layoutX="10.0" layoutY="100.0" text="CurrentVolume" />
-            <Label fx:id="fueltankCurrentVolume" layoutX="115.0" layoutY="98.0" text="0" />
+            <Label fx:id="fueltankVolumeValue" layoutX="115.0" layoutY="31.0" text="0" />
+            <Label fx:id="fueltankCriticalLevel" layoutX="115.0" layoutY="52.0" text="0" />
+            <Label layoutX="10.0" layoutY="74.0" text="CurrentVolume" />
+            <Label fx:id="fueltankCurrentVolume" layoutX="115.0" layoutY="74.0" text="0" />
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="petrolStationPopup" layoutX="406.0" layoutY="570.0" prefHeight="66.0" prefWidth="143.0">
+      <AnchorPane fx:id="petrolStationPopup" layoutX="399.0" layoutY="539.0" prefHeight="66.0" prefWidth="143.0" styleClass="window_background">
          <children>
-            <Label layoutX="10.0" layoutY="10.0" text="Speed" />
             <Label layoutX="10.0" layoutY="40.0" text="Status" />
             <Label fx:id="petrolstationSpeed" layoutX="115.0" layoutY="10.0" text="0" />
             <Label fx:id="petrolstationStatus" layoutX="115.0" layoutY="40.0" text="0" />
+            <Label layoutX="10.0" layoutY="10.0" text="Speed" />
          </children>
       </AnchorPane>
       <Label fx:id="infoLabel" layoutX="835.0" layoutY="40.0" prefHeight="18.0" prefWidth="156.0" styleClass="text" stylesheets="@../styles/styles.css" text="Информационное табло">
