--- a/src/main/resources/views/developerInfo.fxml
+++ b/src/main/resources/views/developerInfo.fxml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="300.0" prefWidth="400.0" styleClass="window_background" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DevInfoController">
+<AnchorPane prefHeight="300.0" prefWidth="400.0" styleClass="window_background" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DevInfoController">
    <children>
-      <TextArea blendMode="MULTIPLY" editable="false" layoutX="30.0" layoutY="55.0" prefHeight="223.0" prefWidth="341.0" styleClass="text" stylesheets="@../styles/styles.css" text="&#9;&#9;Лабораторный практикум&#10;по дисциплине &quot;Технологии программирования&quot;&#10;&#9;Проект &quot;Система моделирования работы&#10;&#9;&#9;автозаправочной станции&quot;&#10;Разработчики:&#10;Конев А.В.&#10;Сергеев Н.С.&#10;Фомичёв А.В.&#10;&#9;&#9;&#9;гр.6402-090301D&#10;&#9;&#9;Самарский Университет, 2019">
+      <TextArea blendMode="MULTIPLY" editable="false" layoutX="30.0" layoutY="55.0" prefHeight="223.0" prefWidth="341.0" styleClass="text" stylesheets="@../styles/styles.css" text="&#9;&#9;Лабораторный практикум&#10;по дисциплине &quot;Технологии программирования&quot;&#10;&#9;Проект &quot;Система моделирования работы&#10;&#9;&#9;автозаправочной станции&quot;&#10;Разработчики:&#10;Конев А.В.&#10;Сергеев Н.С.&#10;Фомичёв А.В.&#10;&#9;&#9;&#9;гр.6402-090301D&#10;&#9;&#9;Самарский университет, 2019">
          <font>
             <Font size="29.0" />
          </font>
