--- a/src/main/resources/views/imitation.fxml
+++ b/src/main/resources/views/imitation.fxml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import java.lang.String?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane" prefHeight="600.0" prefWidth="1000.0" styleClass="window_background" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ImitationController">
+<AnchorPane fx:id="anchorPane" prefHeight="600.0" prefWidth="1000.0" styleClass="window_background" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ImitationController">
    <children>
-      <Label fx:id="gameTime" layoutX="319.0" layoutY="537.0" text="0" />
       <AnchorPane fx:id="statistics" layoutX="761.0" layoutY="562.0" prefHeight="87.0" prefWidth="204.0" AnchorPane.bottomAnchor="10.0">
          <children>
             <Label layoutX="65.0" styleClass="text" stylesheets="@../styles/styles.css" text="Статистика">
@@ -144,6 +146,7 @@
          </font>
       </Label>
       <TextArea fx:id="log_list" blendMode="MULTIPLY" layoutX="744.0" layoutY="65.0" prefHeight="363.0" prefWidth="257.0" AnchorPane.rightAnchor="13.0" />
-      <Label layoutX="186.0" layoutY="537.0" text="Модельное время:" />
+      <Label layoutX="220.0" layoutY="502.0" text="Модельное время:" />
+      <Label fx:id="gameTime" layoutX="350.0" layoutY="502.0" text="0" />
    </children>
 </AnchorPane>
